--- a/src/assets/styles/about.css
+++ b/src/assets/styles/about.css
@@ -1,9 +1,10 @@
 #about{
     background-color: lightcoral;
     width: 100%;
-    height: calc(100vh - 3rem);
+    padding: 5rem 1rem 5rem 1rem;
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    align-items: flex-start;
     justify-content: center;
     animation: slideSection 1s ease;
 }
