--- a/src/assets/styles/navbar.css
+++ b/src/assets/styles/navbar.css
@@ -1,8 +1,8 @@
 .nav-bar{
     width: 300px;
-    height: calc(100vh - 3rem);
+    height: calc(100vh);
     position: fixed;
-    top: 1.5rem;
+    top: 0;
     left: -300px;
     z-index: 200;
 }
