--- a/src/assets/styles/skills.css
+++ b/src/assets/styles/skills.css
@@ -3,7 +3,17 @@
     width: 100%;
     height: calc(100vh - 3rem);
     display: flex;
-    align-items: center;
-    justify-content: center;
+    flex-direction: column;
+    padding: 5rem 1rem;
     animation: slideSection 1s ease;
+    gap: 2rem;
+}
+
+.skills-container{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+    background: red;
 }
