--- a/src/assets/styles/home.css
+++ b/src/assets/styles/home.css
@@ -1,28 +1,25 @@
 #home {
     width: 100%;
     max-width: 400px;
+    padding: 2rem 0;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
     gap: 1.5rem;
     position: relative;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, 20%);
     animation: slideSection 1s ease;
 }
 
 #home h1{
     width: 100%;
-    font-size: 24px;
+    font-size: 30px;
     font-weight: 700;
     color: var(--main-color);
     text-align: center;
 }
 
 #home h2{
-    font-size: 20px;
     font-weight: 700;
     color: var(--main-color);
 }
@@ -36,7 +33,7 @@
 }
 
 #home p{
-    font-size: 16px;
+    font-size: 24px;
     color: var(--text-color-normal);
 }
 
