--- a/src/assets/styles/home.css
+++ b/src/assets/styles/home.css
@@ -1,10 +1,10 @@
 #home {
     width: 100%;
+    height: calc(100vh - 3rem);
     max-width: 400px;
-    padding: 2rem 0;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: flex-start;
     gap: 1.5rem;
     position: relative;
