--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@
     --button-items-color: #32ff7e;
     --button-items-color-alt: #a4b0be;
     --border-color: #eee;
+    --border-color-alt: #a4b0be;
     /*========== Font and typography ==========*/
     --body-font: 'Averia Serif Libre', cursive;
 
@@ -61,6 +62,15 @@ h1{
 h2{
     font-size: 25px;
     color: var(--main-color);
+}
+
+h3{
+    font-size: 16px;
+    color: var(--text-color-normal);
+}
+
+p{
+    color: var(--text-color-light);
 }
 
 .App{
