--- a/src/assets/styles/home.css
+++ b/src/assets/styles/home.css
@@ -2,6 +2,7 @@
     width: 100%;
     height: calc(100vh - 3rem);
     max-width: 400px;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -52,7 +53,7 @@
 .home-icons a{
     width: 50px;
     height: 50px;
-    background-color: var(--button-color);
+    background-color: var(--container-color-alt);
     display: flex;
     justify-content: center;
     align-items: center;    border-radius: 10px;
