projects page mobile style completed

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
     --text-color-light: #576574;
     --container-color-normal: #dfe4ea;
     --container-color-alt: #fff;
+    --card-container: #dfe4eade;
     --border-color: #eee;
     --border-color-alt: #a4b0be;
     /*========== Font and typography ==========*/
