--- a/src/assets/styles/projects.css
+++ b/src/assets/styles/projects.css
@@ -1,25 +1,162 @@
 #projects{
-    background-color: purple;
     width: 100%;
-    padding: 5rem 1rem;
+    padding: 1rem;
     display: flex;
     flex-direction: column;
-    animation: slideSection 1s ease;
     gap: 2rem;
+    animation: slideSection 1s ease;
+}
+
+#projects h1{
+    width: 100%;
+    text-align: center;
+    position: relative;
+}
+
+#projects h1:before {
+    content: '';
+    position: absolute;
+    width: calc(40% - 50px);
+    height: 5px;
+    border-radius: 50px;
+    top: 50%;
+    right: 0%;
+    background: linear-gradient(45deg,
+    red, blue, deeppink, blue,
+    red, blue, deeppink, blue);
+    background-size: 900%;
+    border-radius: 10px;
+    animation: glowing 30s linear infinite;
+}
+
+#projects h1:after {
+    content: '';
+    position: absolute;
+    width: calc(40% - 50px);
+    height: 5px;
+    border-radius: 50px;
+    top: 50%;
+    left: 0%;
+    background: linear-gradient(45deg,
+    red, blue, deeppink, blue,
+    red, blue, deeppink, blue);
+    background-size: 900%;
+    border-radius: 10px;
+    animation: glowing 30s linear infinite;
 }
 
 .projects-container{
+    width: 100%;
+    padding: 1rem;
+    border-radius: 10px;
     display: flex;
     flex-direction: row;
+    justify-content: center;
     flex-wrap: wrap;
     gap: 2rem;
-    justify-content: center;
 }
 
 .project-img{
-    width: 350px;
-    height: 200px;
+    width: 100%;
+    height: 250px;
+    border-radius: 10px;
+    max-width: 500px;
     background-repeat: no-repeat;
     background-size: 100% 100%;
     object-fit: contain;
+    position: relative;
+}
+
+.project-img .project-info, .project-img .project-tech{
+    width: 100%;
+    height: 0;
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    overflow: hidden;
+    background-color: var(--card-container);
+    backdrop-filter: blur(5px);
+}
+
+.project-img .project-info{
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    align-items: flex-end;
+    top: 0;
+    left: 0;
+}
+
+.project-img .project-tech{
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    align-items: flex-start;
+    bottom: 0;
+    left: 0;
+}
+
+.project-img .project-tech p{
+    color: var(--text-color-normal);
+}
+/* .project-img:hover .project-info{ para el desktop, se activa este y descativa el de abajo
+    height: 50%;
+}
+
+.project-img:hover .project-tech{
+    height: 50%;
+} */
+
+.projects-container .project-img:nth-child(1) .project-info,
+.projects-container .project-img:nth-child(1) .project-tech{
+    animation: goUpGoDown 5s infinite ;
+    animation-delay: 0s;
+}
+
+.projects-container .project-img:nth-child(2) .project-info,
+.projects-container .project-img:nth-child(2) .project-tech{
+    animation: goUpGoDown 5s infinite ;
+    animation-delay: 2.5s;
+}
+
+.projects-container .project-img:nth-child(3) .project-info,
+.projects-container .project-img:nth-child(3) .project-tech{
+    animation: goUpGoDown 5s infinite ;
+    animation-delay: 5s;
+}
+
+.projects-container .project-img:nth-child(4) .project-info,
+.projects-container .project-img:nth-child(4) .project-tech{
+    animation: goUpGoDown 5s infinite ;
+    animation-delay: 7.5s;
+}
+
+.projects-container .project-img:nth-child(5) .project-info,
+.projects-container .project-img:nth-child(5) .project-tech{
+    animation: goUpGoDown 5s infinite ;
+    animation-delay: 10s;
+}
+
+.projects-container .project-img:nth-child(6) .project-info,
+.projects-container .project-img:nth-child(6) .project-tech{
+    animation: goUpGoDown 5s infinite ;
+    animation-delay: 12.5s;
+}
+
+.projects-container .project-img:nth-child(7) .project-info,
+.projects-container .project-img:nth-child(7) .project-tech{
+    animation: goUpGoDown 5s infinite ;
+    animation-delay: 15s;
+}
+
+@keyframes goUpGoDown {
+    0% {
+        height: 0%;
+    }
+
+    50% {
+        height: 50%;
+    }
+
+    100% {
+        height: 0%;
+    }
 }
