--- a/src/assets/styles/projects.css
+++ b/src/assets/styles/projects.css
@@ -16,7 +16,7 @@
 #projects h1:before {
     content: '';
     position: absolute;
-    width: calc(40% - 50px);
+    width: calc(40% - 70px);
     height: 5px;
     border-radius: 50px;
     top: 50%;
@@ -32,7 +32,7 @@
 #projects h1:after {
     content: '';
     position: absolute;
-    width: calc(40% - 50px);
+    width: calc(40% - 70px);
     height: 5px;
     border-radius: 50px;
     top: 50%;
@@ -72,6 +72,7 @@
     height: 0;
     display: flex;
     justify-content: center;
+    text-align: center;
     position: absolute;
     overflow: hidden;
     background-color: var(--card-container);
