--- a/src/assets/styles/skills.css
+++ b/src/assets/styles/skills.css
@@ -1,6 +1,7 @@
 #skills{
     width: 100%;
     padding: 1rem;
+    padding-bottom: 5rem;
     display: flex;
     flex-direction: column;
     gap: 1rem;
