--- a/src/assets/styles/contact.css
+++ b/src/assets/styles/contact.css
@@ -93,11 +93,18 @@
     gap: 1rem;
 }
 
-.contact-form textarea{
+.form-item{
+    display: flex;
+    flex-direction: column;
+    gap: .5rem;
+}
+
+.form-item textarea, .form-item input{
+    width: 100%;
     display: flex;
     align-items: flex-start;
     justify-content: center;
-    padding: 1rem;
+    padding: .5rem;
     border-radius: 5px;
     font-size: 14px;
     border: 1px solid var(--border-color-alt);
@@ -106,7 +113,7 @@
     backdrop-filter: blur(2px);
 }
 
-.contact-form button{
+.btn-submit{
     margin: 0 auto;
     width: 100px;
     padding: .5rem 1rem;
