navbar and home page desktop style completed, added animations.css

--- a/src/assets/styles/about.css
+++ b/src/assets/styles/about.css
@@ -180,3 +180,10 @@
     background-color: var(--main-color);
     right: calc(99% + 1.5px);
 }
+
+@media screen and (min-width: 1024px) {
+    #about{
+        width: calc(100% - 300px - .5rem);
+    }
+
+}
