--- a/src/assets/styles/home.css
+++ b/src/assets/styles/home.css
@@ -78,74 +78,35 @@
     animation: glowing 30s linear infinite;
 }
 
-@keyframes typing {
-    from {
-        width: 0
+@media screen and (min-width: 1024px) {
+    #home {
+        width: calc(100% - 300px);
+        max-width: calc(100% - 300px);
+        left: 300px;
+        margin: 0;
+        align-items: center;
     }
+
+    .text{
+        width: 0px;
+        overflow: hidden;
+        height: 70px;
+        transition: all 2s;
+        white-space:nowrap;
+        animation: helloWorldMove 10s infinite;
+        animation-delay: 3s;
+    }
+    
 }
 
-@keyframes blink {
-    50% {
-        border-color: transparent
+@keyframes helloWorldMove {
+    0%{
+        width: 0px;
     }
-}
-
-@keyframes glowing {
-    0% {
-        background-position: 0 0;
+    50%{
+        width: 380px;
     }
-
-    50% {
-        background-position: 400% 0;
-    }
-
-    100% {
-        background-position: 0 0;
-    }
-}
-
-@keyframes shake {
-    0% {
-        transform: translate(1px, 1px) rotate(0deg);
-    }
-
-    10% {
-        transform: translate(-1px, -2px) rotate(-1deg);
-    }
-
-    20% {
-        transform: translate(-3px, 0px) rotate(1deg);
-    }
-
-    30% {
-        transform: translate(3px, 2px) rotate(0deg);
-    }
-
-    40% {
-        transform: translate(1px, -1px) rotate(1deg);
-    }
-
-    50% {
-        transform: translate(-1px, 2px) rotate(-1deg);
-    }
-
-    60% {
-        transform: translate(-3px, 1px) rotate(0deg);
-    }
-
-    70% {
-        transform: translate(3px, 1px) rotate(-1deg);
-    }
-
-    80% {
-        transform: translate(-1px, -1px) rotate(1deg);
-    }
-
-    90% {
-        transform: translate(1px, 2px) rotate(0deg);
-    }
-
-    100% {
-        transform: translate(1px, -2px) rotate(-1deg);
+    100%{
+        width: 0px;
     }
 }
