--- a/src/assets/styles/animations.css
+++ b/src/assets/styles/animations.css
@@ -79,3 +79,14 @@
     }
 }
 
+@keyframes helloWorldMove {
+    0%{
+        width: 0px;
+    }
+    50%{
+        width: 380px;
+    }
+    100%{
+        width: 0px;
+    }
+}
