skills page completed desktop style

--- a/src/assets/styles/skills.css
+++ b/src/assets/styles/skills.css
@@ -67,3 +67,24 @@
     border-radius: 5px;
     background-color: var(--container-color-normal);
 }
+
+@media screen and (min-width: 1024px) {
+    #skills{
+        position: relative;
+        width: calc(100% - 300px);
+        max-width: calc(100% - 300px);
+        left: 300px;
+        margin: 0;
+        padding: 3rem 2rem 5rem 1.5rem;
+    }
+
+    .skills-container{
+        max-width: 800px;
+        gap: 3rem;
+    }
+
+    .skills-item:hover{
+        transform: scale(1.2);
+    }
+
+}
