--- a/src/assets/styles/projects.css
+++ b/src/assets/styles/projects.css
@@ -1,4 +1,4 @@
-#projects{
+#projects {
     width: 100%;
     padding: 1rem;
     padding-bottom: 5rem;
@@ -8,7 +8,7 @@
     animation: slideSection 1s ease;
 }
 
-#projects h1{
+#projects h1 {
     width: 100%;
     text-align: center;
     position: relative;
@@ -23,8 +23,8 @@
     top: 50%;
     right: 0%;
     background: linear-gradient(45deg,
-    red, blue, deeppink, blue,
-    red, blue, deeppink, blue);
+            red, blue, deeppink, blue,
+            red, blue, deeppink, blue);
     background-size: 900%;
     border-radius: 10px;
     animation: glowing 30s linear infinite;
@@ -39,14 +39,14 @@
     top: 50%;
     left: 0%;
     background: linear-gradient(45deg,
-    red, blue, deeppink, blue,
-    red, blue, deeppink, blue);
+            red, blue, deeppink, blue,
+            red, blue, deeppink, blue);
     background-size: 900%;
     border-radius: 10px;
     animation: glowing 30s linear infinite;
 }
 
-.projects-container{
+.projects-container {
     width: 100%;
     padding: 1rem;
     border-radius: 10px;
@@ -57,7 +57,7 @@
     gap: 2rem;
 }
 
-.project-img{
+.project-img {
     width: 100%;
     height: 250px;
     border-radius: 10px;
@@ -68,7 +68,8 @@
     position: relative;
 }
 
-.project-img .project-info, .project-img .project-tech{
+.project-img .project-info,
+.project-img .project-tech {
     width: 100%;
     height: 0;
     display: flex;
@@ -80,7 +81,7 @@
     backdrop-filter: blur(5px);
 }
 
-.project-img .project-info{
+.project-img .project-info {
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     align-items: flex-end;
@@ -88,7 +89,7 @@
     left: 0;
 }
 
-.project-img .project-tech{
+.project-img .project-tech {
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
     align-items: flex-start;
@@ -96,9 +97,10 @@
     left: 0;
 }
 
-.project-img .project-tech p{
+.project-img .project-tech p {
     color: var(--text-color-normal);
 }
+
 /* .project-img:hover .project-info{ para el desktop, se activa este y descativa el de abajo
     height: 50%;
 }
@@ -107,46 +109,9 @@
     height: 50%;
 } */
 
-.projects-container .project-img:nth-child(1) .project-info,
-.projects-container .project-img:nth-child(1) .project-tech{
-    animation: goUpGoDown 5s infinite ;
+.projects-animation {
+    animation: goUpGoDown 5s infinite;
     animation-delay: 0s;
-}
-
-.projects-container .project-img:nth-child(2) .project-info,
-.projects-container .project-img:nth-child(2) .project-tech{
-    animation: goUpGoDown 5s infinite ;
-    animation-delay: 2.5s;
-}
-
-.projects-container .project-img:nth-child(3) .project-info,
-.projects-container .project-img:nth-child(3) .project-tech{
-    animation: goUpGoDown 5s infinite ;
-    animation-delay: 5s;
-}
-
-.projects-container .project-img:nth-child(4) .project-info,
-.projects-container .project-img:nth-child(4) .project-tech{
-    animation: goUpGoDown 5s infinite ;
-    animation-delay: 7.5s;
-}
-
-.projects-container .project-img:nth-child(5) .project-info,
-.projects-container .project-img:nth-child(5) .project-tech{
-    animation: goUpGoDown 5s infinite ;
-    animation-delay: 10s;
-}
-
-.projects-container .project-img:nth-child(6) .project-info,
-.projects-container .project-img:nth-child(6) .project-tech{
-    animation: goUpGoDown 5s infinite ;
-    animation-delay: 12.5s;
-}
-
-.projects-container .project-img:nth-child(7) .project-info,
-.projects-container .project-img:nth-child(7) .project-tech{
-    animation: goUpGoDown 5s infinite ;
-    animation-delay: 15s;
 }
 
 @keyframes goUpGoDown {
@@ -160,5 +125,32 @@
 
     100% {
         height: 0%;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    #projects {
+        position: relative;
+        width: calc(100% - 300px);
+        max-width: calc(100% - 300px);
+        left: 300px;
+        margin: 0;
+        padding: 3rem 2rem 5rem 1.5rem;
+    }
+
+    .projects-animation {
+        animation: none;
+    }
+
+    .projects-container a:hover{
+        transform: scale(1.02);
+    }
+    
+    .project-img:hover .project-info {
+        height: 50%;
+    }
+
+    .project-img:hover .project-tech {
+        height: 50%;
     }
 }
