darkMode completed, and fixed some bugs

--- a/src/assets/styles/animations.css
+++ b/src/assets/styles/animations.css
@@ -90,3 +90,15 @@
         width: 0px;
     }
 }
+
+@keyframes growScale {
+    0%{
+        transform: scale(1);
+    }
+    50%{
+        transform: scale(1.2);
+    }
+    0%{
+        transform: scale(1);
+    }
+}
