--- a/src/assets/styles/about.css
+++ b/src/assets/styles/about.css
@@ -141,6 +141,7 @@
     padding: 1rem 1.5rem;
     border-radius: .5rem;
     background-color: var(--container-color-normal);
+    backdrop-filter: blur(2px);
 }
 
 .education-div{
