--- a/src/assets/styles/navbar.css
+++ b/src/assets/styles/navbar.css
@@ -5,8 +5,9 @@
     top: 0;
     right: -300px;
     z-index: 200;
-    background-color: var(--container-color-alt);
+    background-color: var(--nav-container-bg);
     box-shadow: 0 0 5px 0 var(--text-color-normal);
+    backdrop-filter: blur(10px);
 }
 
 .open-nav{
@@ -53,7 +54,7 @@
     font-weight: 700;
     border-bottom: 2px solid var(--border-color);
     cursor: pointer;
-    color: var(--text-color-normal);    
+    color: var(--main-color);    
 }
 
 .close-open-nav{
@@ -92,6 +93,38 @@
     background-color: var(--container-color-alt);
 }
 
+.darky-sunny{
+    width: 60px;
+    height: 60px;
+    font-size: 40px;
+    position: relative;
+    border-radius: 50%;
+}
+
+.darky-sunny i{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    border-radius: 50%;
+}
+
+.darky{
+    background-color: var(--container-color-alt);
+    z-index: 30;
+}
+
+.sunny{
+    background-color: var(--container-color-alt);
+    color: var(--sunny-color);
+    z-index: 20;
+}
+
 @media screen and (min-width: 1024px) {
     .nav-bar{
         width: 300px;
@@ -102,5 +135,9 @@
 
     .close-open-nav{
         display: none;
+    }
+
+    .nav-items li{
+        font-size: 24px; 
     }
 }
