--- a/src/assets/styles/skills.css
+++ b/src/assets/styles/skills.css
@@ -66,6 +66,11 @@
     padding: 1rem;
     border-radius: 5px;
     background-color: var(--container-color-normal);
+    backdrop-filter: blur(2px);
+}
+
+.grow{
+    animation: growScale 2s;
 }
 
 @media screen and (min-width: 1024px) {
