--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,8 @@
 :root {
     /*========== Colors ==========*/
     --main-body-color: #f1f2f6;
-    --main-color: #952F57;
-    --alt-color: #952F57;
+    --main-color: #009432;
+    --alt-color: #009432;
     --text-color-normal: #222f3e;
     --text-color-light: #576574;
     --container-color-normal: #dfe4ea80;
